fix(various): a major fix for multiple bugs
Squashed commit of the following:

commit 444fbc021cf5437f9b6e9b7226ff9f65dfb78fee
Author: PGCaptain <kylewei@gmail.com>
Date:   Wed Nov 19 17:54:45 2025 +0800

    fix the evaluation session title

commit def12ad29fa0b0835f2cf820a4a6168719f2efbb
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 18:15:01 2025 +0800

    review code

commit 8ee3613e2524014cc6a450f73b83c22b360a555d
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 17:08:22 2025 +0800

    fixed speech modal finally

commit b5a232bd971a8aafc318455a861a1a716d2e0020
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 16:43:28 2025 +0800

    fix the speech edit modal

commit d3ade4ea6317be4568a656822a699d6bbd269aad
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 15:14:38 2025 +0800

    fix permission issues with button-group

commit 8b286fe680afb2a10c3c1dd33ad3d9567901bfe1
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 15:05:04 2025 +0800

    fix evaluation edit modal

commit 5479de85e7e7214bb02915c39dc990ef757e204d
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 13:10:22 2025 +0800

    fix the special project display, hopefully

commit 798ac22ecfe1a68e31963783f2b117dfaf9536ed
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 12:28:33 2025 +0800

    fix(agenda): show special projects properly

commit 7abf3cddf76a560fb8e90b0895751909783d9678
Author: Kyle Wei <kylewei@gmail.com>
Date:   Tue Nov 18 11:01:17 2025 +0800

    consolidate speech modals

commit a1e2e25fcea5f1e8226d1232f8e3033685efa6b3
Author: Kyle Wei <kylewei@gmail.com>
Date:   Mon Nov 17 18:35:40 2025 +0800

    fix(log): refactor the evaluation model. still need to work on other models

commit b18e526d9ea12fb09994e6b9b404b95acf1f8f45
Author: Kyle Wei <kylewei@gmail.com>
Date:   Mon Nov 17 17:00:49 2025 +0800

    feat(agenda): improve the population of speakers for evaluation

commit d9f773911bfa18d52e3e3a7e01c112f9bc22dd29
Author: Kyle Wei <kylewei

--- a/app/static/css/agenda.css
+++ b/app/static/css/agenda.css
@@ -171,7 +171,7 @@
     border-radius: 4px;
     font-size: 1em;
     width: 100%;
-    max-width: 500px;
+    max-width: 800px;
     box-sizing: border-box;
 }
 
@@ -229,6 +229,18 @@
     color: #555;
     font-size: 0.9em;
     margin: 0;
+}
+
+#edit-mode-buttons {
+    position: fixed;
+    top: 75px; 
+    right: 25px; 
+    z-index: 1000;
+
+    background-color: #ffffff; /* Adds the white background */
+    padding: 10px;             /* Gives the buttons breathing room */
+    border-radius: 8px;        /* Softens the corners */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); /* Adds a subtle shadow */
 }
 
 .action-bar-left #meeting-filter {
