--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -52,14 +52,18 @@ content %}
     </tr>
     <tr>
       <td><label>Current Path</label></td>
-            <td>{{ user.Current_Path }}</td>
-        </tr>
-        <tr>
-            <td><strong>Next Project:</strong></td>
-            <td>{{ user.Next_Project }}</td>
-        </tr>
-        <tr>
-            <td><strong>Completed Levels:</strong></td>
+      <td>{{ user.Current_Path }}</td>
+    </tr>
+    <tr>
+      <td><label>Completed Levels:</label></td>
+      <td>{{ user.contact.Completed_Levels if user.contact else '' }}</td>
+    </tr>
+    <tr>
+      <td><strong>Next Project:</strong></td>
+      <td>{{ user.Next_Project }}</td>
+    </tr>
+    <tr>
+      <td><label for="bio">Bio:</label></td>
       <td>
         <textarea
           id="bio"
@@ -72,9 +76,7 @@ content %}
             border: 1px solid #ccc;
             border-radius: 4px;
           "
-        >
-{{ user.contact.Bio if user.contact.Bio else '' }}</textarea
-        >
+        >{{ user.contact.Bio if user.contact.Bio else '' }}</textarea>
       </td>
     </tr>
     {% else %}
