--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -116,21 +116,27 @@
             </div>
         </div>
         <div class="action-bar-right">
-             {% if is_authorized(session.get('user_role'), 'AGENDA_EDIT') %}
-                <div class="button-group" id="edit-mode-buttons" style="display: none;">
-                    <button id="cancel-edit-btn" class="btn btn-danger">Cancel</button>
-                    <button id="add-row-btn" class="btn btn-info">Add</button>
-                    <button id="edit-logs-btn" class="btn btn-primary">Save</button>
-                </div>
-                <div class="button-group" id="view-mode-buttons">
-                    <button id="create-btn" class="btn btn-success">New</button>
-                    <button id="export-btn" class="btn btn-info">Export</button>
-                    <button id="edit-btn" class="btn btn-primary">Edit</button>
-                </div>
+            <div class="button-group" id="view-mode-buttons">
+            {% if is_authorized(session.get('user_role'), 'AGENDA_EDIT') %}
+            <button id="create-btn" class="btn btn-success">New</button>
             {% endif %}
+            {% if session.logged_in %}
+            <button id="export-btn" class="btn btn-info">Export</button>
+            {% endif %}
+            {% if is_authorized(session.get('user_role'), 'AGENDA_EDIT') %}
+            <button id="edit-btn" class="btn btn-primary">Edit</button>
+            {% endif %}
+            </div>
         </div>
     </div>
-
+    
+    {% if is_authorized(session.get('user_role'), 'AGENDA_EDIT') %}
+    <div class="button-group" id="edit-mode-buttons" style="display: none;">
+        <button id="cancel-edit-btn" class="btn btn-danger">Cancel</button>
+        <button id="add-row-btn" class="btn btn-info">Add</button>
+        <button id="edit-logs-btn" class="btn btn-primary">Save</button>
+    </div>
+    {% endif %}
 
     <div class='table-container'
          id="table-container"
@@ -197,17 +203,15 @@
                                {% set cleaned_title = log_dict.Session_Title|replace('"', '') if log_dict.Session_Title else '' %}
 
                                {# Display Title #}
-                               {% if log_dict.session_type_title == 'Pathway Speech' %}
-                                   "{{ cleaned_title }}"
-                               {% elif log_dict.session_type_title == 'Presentation' %}
-                                   {{ cleaned_title }}
-                               {% elif log_dict.Project_ID %}
-                                   "{{ cleaned_title }}"
-                               {% elif log_dict.session_type_title == 'Evaluation' %}
+                               {% if log_dict.session_type_title == 'Evaluation' %}
                                    Evaluation for {{ cleaned_title }}
                                    {% if log_dict.speaker_is_dtm %}
                                        <sup class="dtm-superscript">DTM</sup>
                                    {% endif %}
+                               {% elif log_dict.session_type_title in ['Pathway Speech', 'Presentation'] %}
+                                   "{{ cleaned_title }}"
+                               {% elif log_dict.Project_ID %}
+                                   "{{ cleaned_title }}"
                                {% elif log_dict.predefined %}
                                    {{ log_dict.session_type_title }}
                                {% else %}
@@ -271,7 +275,7 @@
             </tbody>
         </table>
     </div>
-
+    
     <div id="createAgendaModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeCreateAgendaModal()">&times;</span>
