--- a/app/static/css/pathway_library.css
+++ b/app/static/css/pathway_library.css
@@ -62,6 +62,9 @@
     text-align: center;
     flex: 1;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .path-dl { background-color: #4A90E2; } /* Soft Blue */
 .path-eh { background-color: #F5A623; } /* Warm Amber */
